<resources>
    <string name="app_name">Blood Bank</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="enter_username">Enter username</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="gender_male">Male</string>
    <string name="user_registration">User Registration</string>
    <string name="given_name">Given Name</string>
    <string name="surname_err">Surname should be more than 3 characters</string>
    <string name="surname">Surname</string>
    <string name="age">You should be 18+ to donate blood</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)</string>
    <string name="personal_details">Personal Details</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="bloodgroup">BG+</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="donor_name">Donor Name</string>
    <string name="location">Location</string>
    <string name="arrow">arrow</string>
    <string name="blood">blood</string>
    <string name="update_profile">Update Profile</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="user_address">User Address</string>
    <string name="street_name">Street Name</string>
    <string name="suburb">Suburb</string>
    <string name="city">City</string>
    <string name="pin">Pin</string>
    <string name="login_details">Login Details</string>
    <string name="username">Username</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enlist_as_donor">Enlist as donor</string>
    <string name="u_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="female_reg">Female</string>
    <string name="other_reg">Other</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_someone_example_com">Email (someone@example.com)</string>
    <string name="user_address_reg">User Address</string>
    <string name="street_name_reg">Street Name</string>
    <string name="suburb_reg">Suburb</string>
    <string name="city_reg">City</string>
    <string name="pin_reg">Pin</string>
    <string name="login_details_reg">Login Details</string>
    <string name="username_reg">Username</string>
    <string name="set_password_reg">Set Password</string>
    <string name="confirm_password_reg">Confirm Password</string>
    <string name="enlist_as_donor_reg">Enlist as donor</string>
    <string name="register_reg">Register</string>
    <string name="completed">Completed</string>
    <string name="request">Request</string>
    <string name="display_requester_message">Display requester message</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="requester">Requester</string>
    <string name="requester_name">Requester Name</string>
    <string name="request_status">Request status</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="title_activity_my_requests">My Requests</string>
    <string name="action_settings">Refresh</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_request">My Request</string>
    <string name="updateuser_profile">Update Profile</string>
    <string name="user_request">User Request</string>


</resources>


