<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unitec.bloodbank.bloodbankproject.RegistrationActivity"
    android:background="#fff1f1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="@dimen/expanddimention"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/constraintmargin"
        android:layout_marginLeft="@dimen/constraintmargin"
        android:layout_marginRight="@dimen/constraintmargin"
        android:layout_marginStart="@dimen/constraintmargin"
        android:scrollbars="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_registration"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textIsSelectable="true"
                android:layout_marginBottom="@dimen/m_b"
                android:layout_marginTop="@dimen/m_t"
                android:textSize="@dimen/size" />

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:elevation="1dp"
                android:text="@string/personal_details" />

             <EditText
                android:id="@+id/givenname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/given_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date_of_birth_dd_mm_yyyy"
                android:layout_marginBottom="20dp"
                android:inputType="date" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender">

                <RadioButton
                    android:id="@+id/maleradio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:text="@string/gender_male" />

                <RadioButton
                android:id="@+id/femaleradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female_reg" />

            <RadioButton
                android:id="@+id/otherradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/other_reg" />
            </RadioGroup>

            <Spinner
                android:id="@+id/bloodgroup"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_someone_example_com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_address_reg" />

            <EditText
                android:id="@+id/streetname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/street_name_reg"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/suburb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/suburb_reg"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city_reg"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pin_reg"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lbl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_details_reg" />

            <EditText
                android:id="@+id/loginname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_reg"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/set_password_reg"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password_reg"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enlist_as_donor_reg" />

            <TextView
                android:id="@+id/formErrors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/register_reg" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
