<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingEnd="0dp"
    android:paddingStart="10dp">

    <TextView
        android:id="@+id/req_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/donor_name"
        android:paddingBottom="10dp"
        android:text="@string/request_status"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:layout_toStartOf="@+id/linearLayoutBlood" />

    <TextView
        android:id="@+id/donor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:text="@string/donor_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayoutBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        tools:ignore="RelativeOverlap">


        <TextView
            android:id="@+id/blood_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5sp"
            android:text="@string/blood"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_arrow"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/arrow"
            android:tint="@color/colorWhite"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


</RelativeLayout>