<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bloodgroup"
        android:background="@color/colorWhite"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text_mobile"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mobile"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/imageButtonMobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.83"
            android:background="@color/colorPrimaryDark"
            android:tint="@android:color/background_light"
            app:srcCompat="@drawable/ic_call_black_24dp"
            android:contentDescription="@string/mobile" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text_email"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/imageButtonEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:tint="@android:color/background_light"
            app:srcCompat="@drawable/ic_email_black_24dp"
            android:contentDescription="@string/email" />
    </LinearLayout>

</LinearLayout>